--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,23 @@
 [project]
-name = "ai-trip-planner"
+name = "AI-Travel-Planner"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "langchain>=0.3.26",
+    "langchain-community>=0.3.27",
+    "langchain-experimental>=0.3.4",
+    "langchain-google-community>=2.0.7",
+    "langchain-groq>=0.3.6",
+    "langchain-openai>=0.3.28",
+    "langchain-tavily>=0.2.10",
+    "langgraph>=0.5.4",
+    "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
+    "streamlit>=1.47.0",
+    "uvicorn>=0.35.0",
 ]
