--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "ipykernel>=6.30.0",
     "langchain>=0.3.26",
     "langchain-community>=0.3.27",
     "langchain-experimental>=0.3.4",
